--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -27,11 +27,12 @@ body {
 
 header {
 	position: fixed;
-	display: block;
+	display: inline-block;
 	background-color: #fff;
 	border-color: #e2e2e2;
 	min-width: 315px;
 	width: 100%;
+	z-index:1000
 
 }
 
@@ -181,6 +182,88 @@ button.tools-group:hover {
     height: 16px;
 }
 
+.facebook-icon {
+	background-repeat: no-repeat;
+    background-position: -33px -54px;
+    width: 25px;
+    height: 25px;
+}
+
+.twitter-icon {
+	background-repeat: no-repeat;
+    background-position: -482px -280px;
+    width: 25px;
+    height: 25px;
+}
+
+.email-icon {
+	background-repeat: no-repeat;
+    background-position: -131px -21px;
+    width: 25px;
+    height: 25px;
+}
+
+.show-all-icon {
+	background-repeat: no-repeat;
+    background-position: -243px -247px;
+    width: 25px;
+    height: 25px;
+    position: relative;
+    margin-right: 15px;
+}
+
+.save-sharetool:before {
+    margin-left: -15px;
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 20px;
+    margin-top: 4px;
+    background-color: #e2e2e2;
+ }
+
+.save-icon {
+	background-repeat: no-repeat;
+    background-position: -306px -214px;
+    width: 16px;
+    height: 25px;
+}
+
+.comment-icon {
+	background-image: none;
+	position: relative;
+    min-width: 24px;
+    min-height: 12px;
+    padding: 5px;
+    border: 1px solid #666;
+    color: #333;
+    border-radius: 4px;
+}
+
+.comment-icon:before {
+	content: '';
+    position: absolute;
+    bottom: -7px;
+    left: 15px;
+    border-width: 6px 0 0 8px;
+    border-style: solid;
+    border-color: #666 transparent;
+    display: block;
+    width: 0;
+}
+
+.comment-icon:after {
+	content: '';
+    position: absolute;
+    bottom: -6px;
+    left: 16px;
+    border-width: 6px 0 0 6px;
+    border-style: solid;
+    border-color: #fff transparent;
+    display: block;
+    width: 0;
+}
+
 
 	/*button text*/
 
@@ -189,6 +272,8 @@ button.tools-group:hover {
 	vertical-align: middle;
 	padding-left: 2px;
 }
+
+
 
 
 
@@ -221,3 +306,327 @@ img {
  /* width: 981px;
   height: 180px;*/
 /*}*/
+
+/*main article*/
+
+.main {
+	display: inline-block;
+	background-color: #fff;
+	border-color: #e2e2e2;
+	min-width: 315px;
+	width: 100%;
+	position: relative;
+	top:47px;
+	height:auto;
+	margin-top: 0;
+	box-shadow: -3px 0px 3px 0px #CCCCCC;
+}
+
+.article-container {
+	position: relative;
+	margin-top: 3px;
+	margin-left: 5%;
+	margin-right: 10%;
+	border-top: 1px solid #000;
+}
+
+article {
+	display: block;
+	margin-top: 7px;
+	margin-bottom: 32px;
+}
+
+.story-header {
+	position: relative;
+	margin-right: 0;
+    margin-left: 0;
+    display: block;
+}
+
+
+#story-meta {
+	margin-bottom: 20px;
+	height: auto;
+}
+
+.topic {
+	margin-bottom: 32px;
+	font-size: 13px;
+	line-height: 13px;
+    font-weight: 700;
+    font-style: normal;
+    font-family: "nyt-franklin",arial,helvetica,sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 0;
+    color: #000;
+}
+
+.headline {
+	font-size: 2.125rem;
+	line-height: 2.375rem;
+    font-weight: 700;
+    font-family: "nyt-cheltenham",georgia,"times new roman",times,serif;
+    font-style: italic;
+    margin-bottom: 10px;
+    color: #000;
+
+}
+
+.story-footer {
+	border-top: 1px solid #e2e2e2;
+	padding-top: 14px;
+	display: flex;
+	justify-content: space-between; /*wtf*/
+}
+
+.top-allign {
+	margin-bottom: 3px;
+}
+
+.by-line {
+
+	font-family: georgia;
+    display: inline-block;
+    font-size: 11px;
+    font-weight: 500;
+    margin-right: 12px;
+    line-height: 11px;
+    font-size: 11px;
+}
+
+.date {
+		font-family: georgia;
+   		display: inline-block;
+    	font-size: 11px;
+    	font-weight: 500;
+	    margin-right: 12px;	    
+	}
+
+.social-tools {
+	    margin-top: 0;
+	    display: block;
+	    /*align-items: baseline;*/
+	    flex-shrink: 0;
+	    padding-bottom: 10px;
+}
+
+.share-tools-menu {
+		    display: flex;
+    		margin-top: 3px;
+    		padding-left: 0;
+    		list-style: none;
+}
+
+.sharetool {
+	margin-right: 15px;
+
+}
+
+.comment {
+	margin-right: 0;
+
+}
+
+.bigimage {
+	display: flex;
+	vertical-align: middle;
+    width: 100%;
+    height: auto;
+    margin-bottom: 0;
+}
+
+.article-image {
+	margin-bottom: 0;
+	height: auto;
+}
+
+.image-description {
+	padding-top: 0;
+	position:relative;
+	margin-top: 0;
+	float:left;
+	width:55%;
+	text-align: left;
+}
+
+.descrip {
+	margin-top: 5px;
+	padding-top: 0;
+	font-family: nyt-cheltenham-sh, georgia, "times new roman", times, serif;
+	font-size: 14px;
+    color: #666666;
+    line-height: 18px;
+    vertical-align: baseline;
+}
+
+#desc-author {
+	padding-left: 3px;
+	font-size: 11px;
+	color: #999999;
+}
+
+
+
+.story-body {
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+
+}
+
+.story-body-suplemental1 {
+	    width: 55%;
+	    flex-grow: 0;
+}
+
+
+.container-descrip {
+	height:auto;
+	width: 100%;
+	margin-bottom:80px;
+	padding-bottom: 10px;
+}
+
+.story-body-text {
+	font-size: 17px;
+	line-height: 26px;
+	font-weight: 400;
+    font-style: normal;
+    font-family: georgia,"times new roman",times,serif;
+    margin-left: 60px;
+    margin-right: 0;
+    max-width: none;
+}
+
+.small-heading {
+	font-weight: 800;
+}
+
+/*aside comments section*/
+.story-body-suplemental2 {
+		display:flex;
+	    width: auto;
+	    flex-grow: 0;
+	    flex-flow: column nowrap;
+	    justify-content: flex-start;
+	    position: relative;
+	    padding-top:50%;
+	    
+}
+
+.suplemental2-items {	   
+	/*display: inline-block;
+	justify-content: space-around*/
+	height: auto;
+    max-height: 900px;
+    margin-bottom: 45px;
+    position: relative;
+	top:50%;
+	float:left;
+	
+}
+
+.recent-comments {
+	display:block;
+	width:360px;
+	border-top: 1px solid #e2e2e2;
+	padding-top: 10px;
+	margin-bottom: 0;
+}
+
+.comments-heading {
+	display: inline-block;
+	text-transform: uppercase;
+	font-size: 0.75rem;  
+    font-weight: 700;
+    font-style: normal;
+    font-family: "nyt-franklin",arial,helvetica,sans-serif;
+    color: #326891;
+    margin-bottom: 1em;
+    
+
+}
+
+.comments-icon {
+	position: relative;
+    transition: background-color 0.3s;
+    width: 20px;
+    height: 13px;
+    background: #879cb4;
+    border-radius: 1px;
+    margin: -3px 8px 0 0;
+    display: inline-block;
+    line-height: 0;
+    vertical-align: middle;
+    font-style: normal;
+    color: #326891;
+}
+
+.recent-comments header {
+	position: relative;
+	display: block;
+	z-index: 0;
+}
+
+.commenter {
+	display: inline-block;
+	font-size: 0.8125rem;
+	line-height: 0.9375rem;
+    font-weight: 800;
+    font-style: normal;
+    font-family: "nyt-franklin",arial,helvetica,sans-serif;
+    color: #000;
+    margin-bottom: 0;
+}
+
+.comment-time {
+	display: inline-block;
+	font-size: 0.75rem;
+	line-height: 0.9375rem;
+    font-weight: 300;
+    font-style: normal;
+    font-family: "nyt-franklin",arial,helvetica,sans-serif;
+    margin-left: 5px;
+    color: #999;
+}
+
+.comment-text {
+	font-size: 0.8125rem;
+	line-height: 1rem;
+    font-weight: 300;
+    font-style: normal;
+    font-family: "nyt-franklin",arial,helvetica,sans-serif;
+    margin-bottom: 0;
+    margin-top:0;
+    color: #666;
+}
+
+.comment {
+	margin: 3px 0 0 0;
+}
+
+.comment header {
+	margin-bottom: 2px;
+}
+
+.recent-comments footer {
+	border-top: 1px solid #e2e2e2;
+    padding-top: 2px;
+    margin-top: 10px;
+}
+
+.comments-footer {
+	font-size: 10px;
+	line-height: 1.375rem;
+    font-weight: 500;
+    font-style: normal;
+    font-family: "nyt-franklin",arial,helvetica,sans-serif;
+    display: inline-block;
+    margin-top: 0px;
+    text-transform: uppercase;
+    cursor: pointer;
+    color: #326891;
+    font-size: 0.625rem;
+    padding: 0;
+}
